--- a/dev/style.css
+++ b/dev/style.css
@@ -28,6 +28,7 @@ body {
     display: flex;
     flex-direction: column;
     background-color: rgba(255, 255, 255, 0.5);
+    width: 200px;
     padding: 10px;
     margin: 10px;
     margin-bottom: 100px;
