Initial code for moving the 3D board models into the game

--- a/dev/style.css
+++ b/dev/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #CCC;
+    background-color: white;
     font-family: Helvetica;
     font-size: 40pt;
     overflow: hidden;
